<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dose_input_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/morphidose_title_size"
        android:background="@color/green"
        android:padding="@dimen/h1_padding"
        android:layout_marginBottom="@dimen/margin_between_p"/>
    <TextView
        android:id="@+id/hospitalNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:text="@string/dose_intro"
        android:layout_margin="@dimen/margin_between_p"/>
    <TextView
        android:id="@+id/logDose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:text="@string/log_dose"
        android:layout_margin="@dimen/margin_between_p"/>
    <Button
        android:id="@+id/update_prescription"
        android:layout_height="wrap_content"
        android:text="@string/dose_taken"
        android:onClick="addDose"
        android:textColor="@color/white"
        android:textSize="@dimen/morphidose_title_size"
        android:background="@color/green"
        android:layout_width="fill_parent"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin">
    </Button>

</LinearLayout>
