<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:background="@drawable/background_gradient"
tools:context=".MainActivity">

<TextView
    android:id="@+id/frontScreen"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:textColor="@color/white"
    android:text="@string/welcome"
    android:textSize="@dimen/morphidose_title_size"
    android:layout_marginBottom="@dimen/margin_between_p"/>

<TextView
    android:id="@+id/frontScreen1"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:text="@string/register_instructions"
    android:textColor="@color/white"
    android:textSize="@dimen/font_size"
    android:layout_marginBottom="@dimen/margin_between_p"/>

<EditText
    android:id="@+id/EditTextHospitalNumber"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:hint="@string/hospitalNumber"
    android:textColorHint="@color/white"
    android:textSize="@dimen/edit_text"
    android:textColor="@color/white"
    android:textStyle="italic"
    android:inputType="textNoSuggestions"
    android:layout_marginBottom="@dimen/margin_between_p"/>

<Button
    android:id="@+id/ButtonSubmitHospitalNumber"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/submit"
    android:textSize="@dimen/button_size"
    android:textColor="@color/white"
    android:background = "@drawable/round_button"/>

</LinearLayout>